--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,9 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+*{
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 body {
 
   color: rgb(var(--foreground-rgb));
@@ -25,6 +27,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+   
 }
 
 @layer utilities {
@@ -32,3 +35,5 @@ body {
     text-wrap: balance;
   }
 }
+
+
